Add a TOC that is less hacky to update than the quarto version when lang chagnes and fixed on the bottom.

--- a/documentation/nb_guidelines.qmd
+++ b/documentation/nb_guidelines.qmd
@@ -7,6 +7,7 @@ format:
 ---
 
 ```{ojs}
+//| echo: false
 {
     let hero_url = "https://static.observableusercontent.com/files/989edb75ebd2385598efb095854863f630369e73c55a75bcfcbcc4af67a76a7a5f4b9194039ef3e497f7d95aacf903d84532119cc8dce5624f4a4bb40c4b7768"
 
@@ -65,16 +66,14 @@ These dynamic insights can be in partial or full sentence form, and in either an
 We have put together a table of contents function that you can use in your own notebooks. Below is an example:
 
 ```{ojs}
+
 function tocOneliner({
   selector = "h1", // selectors to include (can comma-separate, like "h1,h2,h3")
   heading = "<b>In this notebook</b>", // heading for ToC
   delim = '&nbsp;|&nbsp;', // delimiter between links
   skip = [], // text content for headers to exclude
 } = {}) {
-  // return a one-liner table of contents
-  // allow for skips
-  // modified from https://observablehq.com/@mbostock/toc
-  
+
   return Generators.observe(notify => {
     let headings = [];
 
@@ -158,5 +157,20 @@ More advanced data/database connections do exist for loading data, but attaching
 - **[Observable Documentation](https://observablehq.com/documentation/)**: for any questions about Observable, their documentation is a great resource. We have referenced specific sections that can help.
 
 ```{ojs}
+//| echo: false 
 notebookTitle = 'Agriculture Adaptation Atlas: Data Exploration Guidelines'
+```
+
+
+```{ojs}
+//| echo: false
+import { atlas_toc } from '../helpers/floating-toc.ojs'
+toc_bottom = atlas_toc({
+  skip: [notebookTitle, "Appendix"]
+})
+htl.html`
+      <div class='floating-toc'>
+      ${toc_bottom}
+      </div>
+      `
 ```
