updates for the overall styling, hero image, and a better template for new notebooks. Big fixes for the TOC now so it is stable, and also added in the language selector to the top nav-bar.

--- a/documentation/nb_guidelines.qmd
+++ b/documentation/nb_guidelines.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Atlas Notebook Guidelines"
+pagetitle: "Atlas Notebook Guidelines"
 format:
   html:
     code-fold: true
@@ -12,7 +12,7 @@ format:
     let hero_url = "https://static.observableusercontent.com/files/989edb75ebd2385598efb095854863f630369e73c55a75bcfcbcc4af67a76a7a5f4b9194039ef3e497f7d95aacf903d84532119cc8dce5624f4a4bb40c4b7768"
 
     return htl.html`
-        <h1 style="display: none;">${notebookTitle}</h1>
+        <h1 class="notebook-title" style="display: none;">${notebookTitle}</h1>
         <img src="${hero_url}" style="width: 100%; height: 400px; object-fit: cover; overflow: hidden;"/>
 `
 }
@@ -165,7 +165,7 @@ notebookTitle = 'Agriculture Adaptation Atlas: Data Exploration Guidelines'
 //| echo: false
 import { atlas_toc } from '../helpers/floating-toc.ojs'
 toc_bottom = atlas_toc({
-  skip: [notebookTitle, "Appendix"]
+  skip: [notebookTitle, "notebook-title", "Appendix"]
 })
 htl.html`
       <div class='floating-toc'>
