Added floating toc, updates to template, and a lot of other large chagnes. Also re-ported the gender notebook as an example.

--- a/documentation/nb_guidelines.qmd
+++ b/documentation/nb_guidelines.qmd
@@ -163,7 +163,7 @@ notebookTitle = 'Agriculture Adaptation Atlas: Data Exploration Guidelines'
 
 ```{ojs}
 //| echo: false
-import { atlas_toc } from '../helpers/floating-toc.ojs'
+import { atlas_toc } from '../helpers/styleBuilders.ojs'
 toc_bottom = atlas_toc({
   skip: [notebookTitle, "notebook-title", "Appendix"]
 })
