--- a/notebooks/notebook_template.qmd
+++ b/notebooks/notebook_template.qmd
@@ -8,17 +8,23 @@ date-created: '2025-02-19'
 date-edited: today
 ---
 
-```{=html}
-<img class='hero_image' src="../images/test_im.webp" style="width: 100%; height: 175px; object-fit: cover; overflow: hidden;"/>
+
+```{ojs}
+import { atlas_hero } from "../helpers/styleBuilders.ojs"
+
+hero_url = "../images/test_im.webp"
+atlas_hero(nbTitle, hero_url)
 ```
 
-# `{ojs} nbTitle` {class='title' #notebook-title}
+<!-- # `{ojs} nbTitle` {class='title' #notebook-title} -->
 
 ## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
 
 # `{ojs} heading1` {#example-heading1}
 
 {{< lipsum 1 >}}
+
+{{< lipsum 2 >}}
 
 # `{ojs} heading2` {#example-heading2}
 
@@ -32,10 +38,13 @@ date-edited: today
 
 {{< lipsum 1 >}}
 
+# `{ojs} nbSummary` {#summary}
+
+{{< lipsum 1 >}}
+
 # `{ojs} appendix` {#appendix}
 
-`{ojs} _lang(general_translations.citation)`:
-
+<b>`{ojs} _lang(general_translations.citation)`:</b>\
 Brayden Youngberg, Pete Stewart. `{ojs} nbTitle.` Adaptation Atlas. https://adaptationatlas.cgiar.org/
 
 - `{ojs} _lang(general_translations.license)`: [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)
@@ -43,9 +52,8 @@ Brayden Youngberg, Pete Stewart. `{ojs} nbTitle.` Adaptation Atlas. https://adap
 - `{ojs} _lang(general_translations.acknowledgements)`: "we thank everyone who has contributed to this notebook"
 
 
-
 ```{ojs}
-import { atlas_toc } from '../helpers/floating-toc.ojs'
+import { atlas_toc } from '../helpers/styleBuilders.ojs'
 
 toc_bottom = atlas_toc({
   skip: ['notebook-title', 'appendix', 'source-code'], // These should be the section headings in the {# headings} 
@@ -71,12 +79,13 @@ actually appearing in the notebook.
 <!-- Text and Language Translations -->
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
-nbTitle = _lang({en: "This is a template for to build Atlas notebooks", fr: "Ceci est un modèle pour construire des notebooks Atlas"})
+nbTitle = _lang({en: "This is a template to build Atlas notebooks", fr: "Ceci est un modèle pour construire des notebooks Atlas"})
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
 heading1 = _lang({en: "Heading 1", fr: "Titre 1"})
 heading2 = _lang({en: "Heading 2", fr: "Titre 2"})
 heading3 = _lang({en: "Heading 3", fr: "Titre 3"})
 heading4 = _lang({en: "Heading 4", fr: "Titre 4"})
+nbSummary = _lang({en: "Summary", fr: "Résumé"})
 appendix = _lang(general_translations.appendix)
 ```
 
@@ -84,7 +93,7 @@ appendix = _lang(general_translations.appendix)
 
 keyInsights = {
   let template = _lang({
-        en: `This is where come key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
+        en: `This is where some key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
         fr: `Ceci est là où les résumés clés devraient être, ils seront dynamiques en fonction des sélections comme pays (**:::country:::**) et type de culture (**:::cropType:::**)`
   })
   let fill_items = [
@@ -170,3 +179,39 @@ prettyLanguageView = {
   );
 }
 ```
+
+
+
+<!-- 
+
+# For future use: 
+
+::: {.column-margin}
+
+```{ojs}
+htl.html`
+<style>
+.sticky-margin-div {
+  position: fixed;
+  }
+@media (max-width: 768px) {
+  .sticky-margin-div {
+    position: static;
+    }
+}
+</style>
+
+<div class = "sticky-margin-div">
+    <div>
+      ${Inputs.radio(languages, {
+        label: "Main language toggle",
+        format: (d) => d.key,
+        value: languages.find((x) => x.key === defaultLangKey),
+      })}
+    </div>
+  </div>`
+```
+
+::: 
+
+-->
