restructure of lang to JS ESM module structure to allow awaiting import, seemingly better performance, and less errors on initial page load due to Lang not being defined.

--- a/notebooks/deprecated/gender.qmd
+++ b/notebooks/deprecated/gender.qmd
@@ -941,14 +941,19 @@ ${row[c].split(", ").map((v) => _lang(nbText.BridgeGap.table.values[v.toLowerCas
 ```{ojs}
 // This section needs to be above the .hidden for it to work
 import { atlas_toc } from '../../helpers/styleBuilders.ojs' 
-toc_bottom = atlas_toc({
-    heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
-    skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
-    })
+toc_bottom = {
+  await nbText // force wait/reload with nbText to load so headings have correct labels/languages
+  return atlas_toc({
+      heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
+      skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
+      })
+}
+  
 htl.html`
-      <div class='floating-toc'>
-      ${toc_bottom}
-      </div>`
+  <div class='floating-toc'>
+    ${toc_bottom}
+  </div>`
+
 ```
 
 
@@ -971,10 +976,11 @@ FemaleParticipation = _lang(nbText.GenderedAfriAG.FemaleParticipationLabor.title
 ```
 
 ```{ojs}
-nbText = FileAttachment("../../data/genderNotebook/Gender_nbText.json").json()
-import { Lang } from '../../helpers/lang.ojs'
+nbText = await FileAttachment("../../data/genderNotebook/Gender_nbText.json").json()
 
-_lang = Lang.lg(language.key)
+Lang = await import("../../helpers/lang.js").then(l => l.default);
+
+_lang = await Lang.lg(language.key)
 
 defaultLangKey = {
   const list = languages.map((d) => d.key);
@@ -1084,7 +1090,6 @@ admin_form = () => {
   );
 }
 ```
-
 
 ## Notebook Helpers
 ```{ojs}
