--- a/notebooks/notebook_template.qmd
+++ b/notebooks/notebook_template.qmd
@@ -109,7 +109,7 @@ keyInsights = {
 
 
 ```{ojs}
-import { Lang } from '../helpers/lang.ojs'
+Lang = await import("../../helpers/lang.js").then(l => l.default);
 
 general_translations = await FileAttachment("../helpers/lang_generalTranslations.json").json()
 
