Add discover solution notebook example

--- a/documentation/nb_guidelines.qmd
+++ b/documentation/nb_guidelines.qmd
@@ -19,12 +19,13 @@ format:
 
 ```
 
+# Atlas Notebook Guidelines {#notebook-title}
 
 # Overview
 
-This notebook includes guidelines for the Agriculture Adaptation Atlas' collection of Observable Notebooks. It suggests best practices for consistent styling, narrative structure, and example cells that can be used as the Alliance Bioversity team and the community creates their own notebooks.
+This notebook includes guidelines for the Agriculture Adaptation Atlas' collection of Data Exploration Notebooks. It suggests best practices for consistent styling, narrative structure, and example cells that can be used as the Alliance Bioversity team and the community creates their own notebooks.
 
-Please note: this should be considered a *living document* that can be added to by request of Alliance Bioversity team.
+Please note: this should be considered a *living document* that will be added to and adjusted as needed.
 
 # Creating a Narrative
 
@@ -63,48 +64,26 @@ These dynamic insights can be in partial or full sentence form, and in either an
 
 # Adding a Table of Contents
 
-We have put together a table of contents function that you can use in your own notebooks. Below is an example:
+We have put together a table of contents function that you can use in your own notebooks. This can be imported from the 'helpers' directory. Below is an example if it's use:
 
 ```{ojs}
-function tocOneliner({
-  selector = "h1", // selectors to include (can comma-separate, like "h1,h2,h3")
-  heading = "<b>In this notebook</b>", // heading for ToC
-  delim = '&nbsp;|&nbsp;', // delimiter between links
-  skip = [], // text content for headers to exclude
-} = {}) {
+import { atlas_toc } from '../helpers/styleBuilders.ojs' // TODO: Convert ot a valid JS module
 
-  return Generators.observe(notify => {
-    let headings = [];
-
-    function observed() {
-      let h = Array.from(document.querySelectorAll(selector));
-      h = h.filter((d) => !skip.includes(d.textContent))
-      if (h.length !== headings.length || h.some((h, i) => headings[i] !== h)) {
-        notify(html`${heading}<br>${Array.from(headings = h, (h, i) => {
-          const end = i === headings.length - 1
-          return Object.assign(
-            html`<a href=#${h.id}>${DOM.text(h.textContent)}</a>${end ? '' : delim}`,
-            {onclick: e => (e.preventDefault(), h.scrollIntoView())}
-          );
-        })}`);
-      }
-    }
-
-    const observer = new MutationObserver(observed);
-    observer.observe(document.body, {childList: true, subtree: true});
-    observed();
-    return () => observer.disconnect();
-  });
-}
-
-tocOneliner({
-  skip: [notebookTitle, "Appendix"]
+toc_bottom = atlas_toc({
+  skip: ['notebook-title', 'appendix', 'source-code'],
+  heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`
 })
+
+htl.html`
+      <div class='floating-toc'>
+      ${toc_bottom}
+      </div>
+      `
 ```
 
 Notice by defining the main title as a variable (in [this notebook's Appendix](https://observablehq.com/d/ffcfa914e30d6e5a#cell-13)), we can specify we want to ignore it, along with any other sections. The function defaults to only show h1 headers.
 
-You can copy the code below to use in notebooks.
+You can copy the code above to use in notebooks.
 
 # Color Scales
 
@@ -140,6 +119,30 @@ viewof copyImport = Inputs.button(`Copy ${select.name} color range`, {reduce: ()
 
 ```
 
+# Visualizations
+
+To ensure fast and engaging user experiences, all plots, maps, and figures within the
+observables should have a consistent fixed height to prevent page shifts during interactive
+changes. A maximum height of **800px** is recommended, although it can be adjusted based on
+specific design requirements. A maximum width of 1000px is suggested. Text should be large enough to be read with ease.
+
+- **Dynamic Plots:** Plots should adapt dynamically based on user inputs such as region or
+crop selection, provided no data is unavailable.
+- **Tooltips for Additional Information:** Tooltips can enhance understanding but should
+not overwhelm the main plot. Plots should generally convey information succinctly and
+effectively.
+
+
+# Country Boundaries and Geospatial data
+
+For all spatial data within the Adaptation Atlas data explorations, use the following
+guidelines to maintain consistency and efficiency:
+
+  1. Ensure that all maps, geographic selectors, and other geospatial elements utilize the **Adaptation Atlas boundary dataset**.  These boundaries are based on the GAUL 2024, but include modifications so that country boundaries appear as each country represents themselves, including disputed areas.
+  2. In general the Data Explorations should provide data to admin level 2 where possible, although data should be limited to the highest resolution data avaliable.
+  3. Analysis and any raster extraction should use the highest resoltuon boundaries from the Atlas boundary dataset. 
+  4. Any visualizations within the data explorations should use the low or very low resolution boundaries, unless there is a valid reason for using higher resolution boundaries. This is to insure fast page load speeds, as there is a signifigant difference in file sizes between dataset resolution. 
+  5. Only one set of admin boundaries should be used in each data exploration - all datasets with a spatial "aspect" should be stored in raw tabular format and merged to the admin boundries within each notebook using the matching 'admin0_name', 'admin1_name', and 'admin2_name' columns. This will prevent multiple large boundary datasets from being loaded in each notebook. 
 
 # Wrangling Data
 
