--- a/notebooks/index.qmd
+++ b/notebooks/index.qmd
@@ -9,6 +9,7 @@ These may be useful for reference, but are not maintained or updated.
 They may also be useful as examples for how to create your own quarto notebooks, note that some of 'notebook standards' have been added and changed since this point.
 
 - [Analyze Women's Exposure To Climate Hazards](/notebooks/deprecated/gender.qmd)
+- [Discover Solutions](/notebooks/deprecated/DiscoverSolutions.qmd)
 
 # Notebook Template
 We provide a basic notebook template which can be copied and modified to assist in the development of new notebooks.
