Lots of added documentation and adding new functions from the old notebooks.

--- a/notebooks/deprecated/DiscoverSolutions.qmd
+++ b/notebooks/deprecated/DiscoverSolutions.qmd
@@ -1641,10 +1641,10 @@ ${_lang(nbText.methodsSources.h3EraSubsection)}
 
 ```{ojs}
 // This section needs to be above the .hidden for it to work
-import { atlas_toc } from '../../helpers/styleBuilders.ojs' 
+import { atlasTOC } from '../../helpers/uiComponents.ojs' 
 toc_bottom = {
   await nbText // force wait/reload with nbText to load so headings have correct labels/languages
-  return atlas_toc({
+  return atlasTOC({
       heading: `<b>${_lang({en:"In this notebook", fr:"Dans ce notebook"})}</b>`,
       skip: [nbTitle, "notebook-title", "Appendix", "source-code"]
       })
