--- a/notebooks/index.qmd
+++ b/notebooks/index.qmd
@@ -2,6 +2,9 @@
 title: "Adaptation Atlas Notebooks"
 ---
 
+This page will likely note be public facing in production. We have the [landing page](https://adaptationatlas.cgiar.org) for that.
+However, this index page is useful in development to bounce between the examples, different notebooks being worked on, etc. 
+
 # Deprecated/Demo Notebooks
 
 These notebooks are example ports from the original Atlas [notebooks](https://observablehq.com/@adaptationatlas).
@@ -16,4 +19,4 @@ We provide a basic notebook template which can be copied and modified to assist 
 This template creates the basic structure for the notebooks as well as loads in some of the useful 
 libraries and shared data (such as the admin boundaries).
 
-**Find the template [here](/notebooks/notebook_template.qmd)**
+**Find the template [here](/notebooks/nb_template/notebook_template.qmd)**
