--- a/notebooks/nb_template/notebook_template.qmd
+++ b/notebooks/nb_template/notebook_template.qmd
@@ -8,21 +8,25 @@ date-created: '2025-02-19'
 date-edited: today
 ---
 
-
 ```{ojs}
-import { atlas_hero } from "../helpers/styleBuilders.ojs"
+// NOTE: Quarto resolves paths from the project root. If this import fails,
+// try switching to a relative path like "./../../helpers/uiComponents.ojs".
 
-hero_url = "../images/test_im.webp"
-atlas_hero(nbTitle, hero_url)
+import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs"
+
+hero_url = "/images/test_im.webp"
+
+atlasHero(nbTitle, hero_url) //nbTitle is defined on line: x 
 ```
 
-<!-- # `{ojs} nbTitle` {class='title' #notebook-title} -->
+
 
 ## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
-
 # `{ojs} heading1` {#example-heading1}
 
-{{< lipsum 1 >}}
+{{< include _template_plot.qmd >}} 
+
+<!-- The above ^  {{< include path.qmd >}} alows for modular import of code. This is performed on build, so there are no performance implications  -->
 
 {{< lipsum 2 >}}
 
@@ -45,7 +49,7 @@ atlas_hero(nbTitle, hero_url)
 # `{ojs} appendix` {#appendix}
 
 <b>`{ojs} _lang(general_translations.citation)`:</b>\
-Brayden Youngberg, Pete Stewart. `{ojs} nbTitle.` Adaptation Atlas. https://adaptationatlas.cgiar.org/
+Todd Rosenstock, Brayden Youngberg, Pete Stewart. `{ojs} nbTitle.` Adaptation Atlas. https://adaptationatlas.cgiar.org/
 
 - `{ojs} _lang(general_translations.license)`: [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)
 - `{ojs} _lang(general_translations.authors)`: {{< meta nb-authors.1 >}}, {{< meta nb-authors.2 >}}
@@ -53,9 +57,9 @@ Brayden Youngberg, Pete Stewart. `{ojs} nbTitle.` Adaptation Atlas. https://adap
 
 
 ```{ojs}
-import { atlas_toc } from '../helpers/styleBuilders.ojs'
 
-toc_bottom = atlas_toc({
+
+toc_bottom = atlasTOC({
   skip: ['notebook-title', 'appendix', 'source-code'], // These should be the section headings in the {# headings} 
   heading: `<b>${Lang.toSentenceCase(_lang(general_translations.toc))}</b>`
 })
@@ -69,7 +73,7 @@ htl.html`
 
 # Source code {#source-code .hidden} 
 <!-- 
-Note that everything below this point will not appear in the notebook.
+NOTE:Everything below this point will not appear in the notebook.
 This is useful to hide all of the code, master selectors (language, admin level, etc.),
 and other things that are needed for the notebook to run but would be messy if
 actually appearing in the notebook.
@@ -91,13 +95,15 @@ appendix = _lang(general_translations.appendix)
 
 ```{ojs}
 
+mutable hoverCountry = "SSA" // This mutable is defined here and updated in _template_plot.qmd. It should only be defined once.
+
 keyInsights = {
   let template = _lang({
         en: `This is where some key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
         fr: `Ceci est là où les résumés clés devraient être, ils seront dynamiques en fonction des sélections comme pays (**:::country:::**) et type de culture (**:::cropType:::**)`
   })
   let fill_items = [
-      { name: "country", value: _lang({en: 'Chad', fr: 'Tchad'}) },
+      { name: "country", value: hoverCountry }, // _lang({en: 'Chad', fr: 'Tchad'})
       { name: "cropType", value: _lang({en: 'potatoes', fr: 'pomme de terre'}) }
     ]
   let keyText =  md`${Lang.reduceReplaceTemplateItems(template, fill_items)}`
@@ -109,9 +115,9 @@ keyInsights = {
 
 
 ```{ojs}
-Lang = await import("../../helpers/lang.js").then(l => l.default);
+Lang = await import("/helpers/lang.js").then(l => l.default);
 
-general_translations = await FileAttachment("../helpers/lang_generalTranslations.json").json()
+general_translations = await FileAttachment("/helpers/lang_generalTranslations.json").json()
 
 languages = [
   { key: "en", label: "English", locale: 'en-US' },
@@ -186,7 +192,7 @@ prettyLanguageView = {
 
 # For future use: 
 
-::: {.column-margin}
+:-:: {.column-margin}
 
 ```{ojs}
 htl.html`
@@ -212,6 +218,50 @@ htl.html`
   </div>`
 ```
 
-::: 
+:-:: 
 
 -->
+
+<!-- Floating Sidebar: Self-contained HTML, CSS, and JS -->
+<!-- 
+<div id="floating-sidebar">
+
+</div>
+
+<style>
+  #floating-sidebar {
+    position: fixed;
+    top: 150px;           /* Distance from top of the page */
+    left: 20px;          /* Distance from left of the page */
+    width: 260px;        /* Sidebar width */
+    min-height: 400px;   /* Minimum height */
+    max-height: 80vh;    /* Max height relative to viewport */
+    background: #ffffff;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+    border-radius: 8px;
+    padding: 20px;
+    overflow-y: auto;
+    z-index: 9999;
+    transition: box-shadow 0.2s;
+  }
+  #floating-sidebar:hover {
+    box-shadow: 0 8px 24px rgba(0,0,0,0.18);
+  }
+  /* Responsive: hide on small screens */
+  @media (max-width: 800px) {
+    #floating-sidebar {
+      display: none;
+    }
+  }
+</style>
+
+<script>
+  // Optional: Add any JS for interactivity here
+  // Example: Toggle sidebar visibility with a keyboard shortcut (Ctrl+B)
+  document.addEventListener('keydown', function(e) {
+    if (e.ctrlKey && e.key === 'b') {
+      const sidebar = document.getElementById('floating-sidebar');
+      sidebar.style.display = (sidebar.style.display === 'none') ? 'block' : 'none';
+    }
+  });
+</script> -->
