More cleaning and documentation getting first stable release of template ready

--- a/docs/doc_index.qmd
+++ b/docs/doc_index.qmd
@@ -2,7 +2,7 @@
 title: "Adaptation Atlas Documentation Index"
 ---
 
-# How-Tos
+# Tips on Notebook Development
 
 - [Guidelines for Observable Notebooks](/docs/nb_guidelines.qmd)
-<!-- - [Contribution](/documentation/contribute_guide.qmd) -->
+- [Notebook Translation Guide](/docs/translation.qmd)
