--- a/notebooks/index.qmd
+++ b/notebooks/index.qmd
@@ -7,9 +7,8 @@ However, this index page is useful in development to bounce between the examples
 
 # Deprecated/Demo Notebooks
 
-These notebooks are example ports from the original Atlas [notebooks](https://observablehq.com/@adaptationatlas).
-These may be useful for reference, but are not maintained or updated. 
-They may also be useful as examples for how to create your own quarto notebooks, note that some of 'notebook standards' have been added and changed since this point.
+These notebooks are example ports from the original Atlas [notebooks](https://observablehq.com/@adaptationatlas). These may be useful for reference, but are not actively maintained or updated. 
+They may also be useful as examples for how to create your own quarto notebooks. However, they may use old datasets, functions that are no longer applicable, and old code standards.
 
 - [Analyze Women's Exposure To Climate Hazards](/notebooks/deprecated/gender.qmd)
 - [Discover Solutions](/notebooks/deprecated/DiscoverSolutions.qmd)
@@ -20,3 +19,8 @@ This template creates the basic structure for the notebooks as well as loads in 
 libraries and shared data (such as the admin boundaries).
 
 **Find the template [here](/notebooks/nb_template/notebook_template.qmd)**
+
+# Other Documentation and Notebook Guidelines:
+
+- [Guidelines for Developing Observable Notebooks](/docs/nb_guidelines.qmd)
+- [Notebook Translation Guide](/docs/translation.qmd)
