--- a/notebooks/nb_template/notebook_template.qmd
+++ b/notebooks/nb_template/notebook_template.qmd
@@ -1,6 +1,5 @@
 ---
 pagetitle: "Atlas Notebook Template"
-# license: CC BY
 nb-authors: 
   - Brayden Youngberg
   - Pete Stewart
@@ -16,9 +15,8 @@ import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs"
 
 hero_url = "/images/test_im.webp"
 
-atlasHero(nbTitle, hero_url) //nbTitle is defined on line: x 
+atlasHero(nbTitle, hero_url)
 ```
-
 
 
 ## `{ojs} keyInsights` {class='key-insights' #key-insight-text}
@@ -26,7 +24,10 @@ atlasHero(nbTitle, hero_url) //nbTitle is defined on line: x
 
 {{< include _template_plot.qmd >}} 
 
-<!-- The above ^  {{< include path.qmd >}} alows for modular import of code. This is performed on build, so there are no performance implications  -->
+<!-- The above ^  {{< include path.qmd >}} alows for modular import of code. 
+This is performed on build, so there are no performance implications, 
+but be aware of that the global namespaces are shared, so the same variable
+or module imported in each will result in an error -->
 
 {{< lipsum 2 >}}
 
@@ -48,16 +49,8 @@ atlasHero(nbTitle, hero_url) //nbTitle is defined on line: x
 
 # `{ojs} appendix` {#appendix}
 
-<b>`{ojs} _lang(general_translations.citation)`:</b>\
-Todd Rosenstock, Brayden Youngberg, Pete Stewart. `{ojs} nbTitle.` Adaptation Atlas. https://adaptationatlas.cgiar.org/
-
-- `{ojs} _lang(general_translations.license)`: [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)
-- `{ojs} _lang(general_translations.authors)`: {{< meta nb-authors.1 >}}, {{< meta nb-authors.2 >}}
-- `{ojs} _lang(general_translations.acknowledgements)`: "we thank everyone who has contributed to this notebook"
-
 
 ```{ojs}
-
 
 toc_bottom = atlasTOC({
   skip: ['notebook-title', 'appendix', 'source-code'], // These should be the section headings in the {# headings} 
@@ -117,7 +110,7 @@ keyInsights = {
 ```{ojs}
 Lang = await import("/helpers/lang.js").then(l => l.default);
 
-general_translations = await FileAttachment("/helpers/lang_generalTranslations.json").json()
+general_translations = await FileAttachment("/data/shared/generalTranslations.json").json()
 
 languages = [
   { key: "en", label: "English", locale: 'en-US' },
@@ -143,6 +136,7 @@ viewof masterLanguage = Inputs.radio(languages, {
 
 
 ```{ojs}
+// import { NavbarLangSelector } from "/helpers/uiComponents.ojs"
 function NavbarLangSelector(language_obj, masterLanguage) {
   let navEnd = document.querySelector(".navbar-nav.ms-auto .nav-item.compact");
   if (navEnd) {
@@ -170,6 +164,7 @@ function NavbarLangSelector(language_obj, masterLanguage) {
     }
   }
 }
+
 NavbarLangSelector(languages, masterLanguage)
 ```
 
@@ -190,9 +185,9 @@ prettyLanguageView = {
 
 <!-- 
 
-# For future use: 
+# Prototypes for future use to hack a sidebar into notebooks: 
 
-:-:: {.column-margin}
+{.column-margin}
 
 ```{ojs}
 htl.html`
