--- a/notebooks/nb_template/_template_plot.qmd
+++ b/notebooks/nb_template/_template_plot.qmd
@@ -13,11 +13,9 @@ import { boundary_paths } from "/helpers/boundaries.js"
 x = 5 
 
 {
-  const data_topo = await FileAttachment("/data/shared/atlas-region_admin0_simplified.json").json();
+  const data_topo = await FileAttachment("/data/shared/atlas_gaul_a0_africa_simple-vlowres.topojson").json();
 
-  // compress_test = await fetch("/data/shared/atlas-region_admin0_simplified_br.json")
-
-  const data = topojson.feature(data_topo, data_topo.objects["atlas-region_admin0_harmonized"]);
+  const data = topojson.feature(data_topo, data_topo.objects["atlas_gaul_a0_africa"]);
 
   const caption = "This is an example map which can be copied and modified for Atlas notebooks"
   // return plot
