Update and rename image

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -10,7 +10,7 @@ format:
 //| echo: false
 import { atlasHero } from "/helpers/uiComponents.ojs"
 {
-  let hero_url = "/images/test_im.webp"
+  let hero_url = "/images/default_im.webp"
   return atlasHero(nbTitle, hero_url)
 }
 
