--- a/notebooks/nb_template/notebook_template.qmd
+++ b/notebooks/nb_template/notebook_template.qmd
@@ -13,7 +13,7 @@ date-edited: today
 
 import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs"
 
-hero_url = "/images/test_im.webp"
+hero_url = "/images/default_im.webp"
 
 atlasHero(nbTitle, hero_url)
 ```
