Changes to imported lang.js module due to how the url was being handled on build wiht absolute vs. relative paths. had to roll back to relative

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -10,10 +10,20 @@ format:
 //| echo: false
 import { atlasHero } from "/helpers/uiComponents.ojs"
 {
-  let hero_url = "/images/default_im.webp"
+  let hero_url = "./../../images/default_im.webp"
   return atlasHero(nbTitle, hero_url)
 }
 
+```
+
+```{ojs}
+Lang = await import("./../../helpers/lang.js").then(l => l.default);
+languages = [
+  { key: "en", label: "English", locale: 'en-US' },
+  { key: "fr", label: "Français", locale: 'fr-FR' }
+]
+
+Lang
 ```
 
 # Overview
@@ -353,7 +363,7 @@ OJS cells also have the ability to call in imports. Unlike the above quarto impo
 To import a local JS module or code in an OJS file (documented [here](https://quarto.org/docs/interactive/ojs/code-reuse.html)): 
 ````markdown
 ```{ojs}
-Lang = await import("/helpers/lang.js").then(l => l.default);
+Lang = await import("../../../helpers/lang.js").then(l => l.default);
 
 import { atlasTOC, atlasHero  } from "/helpers/uiComponents.ojs"
 ```
