--- a/notebooks/nb_template/notebook_template.qmd
+++ b/notebooks/nb_template/notebook_template.qmd
@@ -108,7 +108,7 @@ keyInsights = {
 
 
 ```{ojs}
-Lang = await import("/helpers/lang.js").then(l => l.default);
+Lang = await import("./../../helpers/lang.js").then(l => l.default);
 
 general_translations = await FileAttachment("/data/shared/generalTranslations.json").json()
 
