Add translation doc

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -10,20 +10,10 @@ format:
 //| echo: false
 import { atlasHero } from "/helpers/uiComponents.ojs"
 {
-  let hero_url = "./../../images/default_im.webp"
+  let hero_url = "/images/default_im.webp"
   return atlasHero(nbTitle, hero_url)
 }
 
-```
-
-```{ojs}
-Lang = await import("./../../helpers/lang.js").then(l => l.default);
-languages = [
-  { key: "en", label: "English", locale: 'en-US' },
-  { key: "fr", label: "Français", locale: 'fr-FR' }
-]
-
-Lang
 ```
 
 # Overview
