--- a/notebooks/nb_template/_template_plot.qmd
+++ b/notebooks/nb_template/_template_plot.qmd
@@ -9,12 +9,10 @@ date-edited: today
 
 
 ```{ojs}
-import { boundary_paths } from "/helpers/boundaries.js"
-
 {
-  const data_topo = await FileAttachment("/data/shared/atlas_gaul_a0_africa_simple-vlowres.topojson").json();
+  const data_topo = await FileAttachment("/data/shared/atlas_gaul_a1_africa_simple-vlowres.topojson").json();
 
-  const data = topojson.feature(data_topo, data_topo.objects["atlas_gaul_a0_africa"]);
+  const data = topojson.feature(data_topo, data_topo.objects["atlas_gaul_a1_africa"]);
 
   const caption = "This is an example map which can be copied and modified for Atlas notebooks"
   // return plot
@@ -49,10 +47,13 @@ import { boundary_paths } from "/helpers/boundaries.js"
         Plot.pointer(
           Plot.centroid({
             channels: {
-              name: {
-                // region label, based on selection
-                label: "Country", // plot-level so inputs don't reload
+              a0: {
+                label: "Country",
                 value: (d) => d.properties.admin0_name
+              },
+              a1: {
+                label: "Admin 1", 
+                value: (d) => d.properties.admin1_name
               },
             }
           })
@@ -62,7 +63,7 @@ import { boundary_paths } from "/helpers/boundaries.js"
   });
   plot.addEventListener("input", (event) => {
   // console.log(plot.value);
-  mutable hoverCountry = plot.value.properties.admin_name
+  mutable hoverCountry = plot.value.properties.admin0_name
   });
   return plot
 }
