--- a/notebooks/nb_template/notebook_template.qmd
+++ b/notebooks/nb_template/notebook_template.qmd
@@ -8,12 +8,12 @@ date-edited: today
 ---
 
 ```{ojs}
-// NOTE: Quarto resolves paths from the project root. If this import fails,
-// try switching to a relative path like "./../../helpers/uiComponents.ojs".
-
 import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs"
 
-hero_url = "/images/default_im.webp"
+hero_url = "./../../images/default_im.webp" 
+// This ^^ must be relative path due to an issue
+// with how Quarto resolves certain paths if local image.
+// It can also be a url.
 
 atlasHero(nbTitle, hero_url)
 ```
@@ -95,8 +95,9 @@ keyInsights = {
         en: `This is where some key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
         fr: `Ceci est là où les résumés clés devraient être, ils seront dynamiques en fonction des sélections comme pays (**:::country:::**) et type de culture (**:::cropType:::**)`
   })
+  
   let fill_items = [
-      { name: "country", value: hoverCountry }, // _lang({en: 'Chad', fr: 'Tchad'})
+      { name: "country", value: hoverCountry },
       { name: "cropType", value: _lang({en: 'potatoes', fr: 'pomme de terre'}) }
     ]
   let keyText =  md`${Lang.reduceReplaceTemplateItems(template, fill_items)}`
@@ -108,7 +109,7 @@ keyInsights = {
 
 
 ```{ojs}
-Lang = await import("./../../helpers/lang.js").then(l => l.default);
+import { lang as Lang } from "/helpers/lang.js"
 
 general_translations = await FileAttachment("/data/shared/generalTranslations.json").json()
 
