--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -9,8 +9,9 @@ format:
 ```{ojs}
 //| echo: false
 import { atlasHero } from "/helpers/uiComponents.ojs"
+
 {
-  let hero_url = "/images/default_im.webp"
+  let hero_url = "./../../images/default_im.webp"
   return atlasHero(nbTitle, hero_url)
 }
 
@@ -353,7 +354,7 @@ OJS cells also have the ability to call in imports. Unlike the above quarto impo
 To import a local JS module or code in an OJS file (documented [here](https://quarto.org/docs/interactive/ojs/code-reuse.html)): 
 ````markdown
 ```{ojs}
-Lang = await import("../../../helpers/lang.js").then(l => l.default);
+import { lang as Lang } from "/helpers/lang.js"
 
 import { atlasTOC, atlasHero  } from "/helpers/uiComponents.ojs"
 ```
@@ -403,7 +404,7 @@ A concise and descriptive folder name should be used for each notebook, and this
 
 # Translations
 
-A small json of general translations can be found in the `/data/shared` directory. These may be useful to add in some basic translations, but each notebook will need a stand-alone translation document. This file is a good example of how the translations are handled within each notebook. Each notebook requires English and French at a minimum. More info on how translations are managed in the Atlas notebooks can be found [here](/path/to/lang/doc.todo).
+A small json of general translations can be found in the `/data/shared` directory. These may be useful to add in some basic translations, but each notebook will need a stand-alone translation document. This file is a good example of how the translations are handled within each notebook. Each notebook requires English and French at a minimum. More info on how translations are managed in the Atlas notebooks can be found [here](/docs/translation.qmd).
 
 # Shared Project Resources
 
