some fixes and added notes due to how quarto is managing certain absolute paths vs relative when publishing to github and possibly other platforms.

--- a/notebooks/deprecated/DiscoverSolutions.qmd
+++ b/notebooks/deprecated/DiscoverSolutions.qmd
@@ -1697,7 +1697,7 @@ quickInsight =_lang(nbText.supportNbText.labels.quickInsights)
 ```{ojs}
 import {nbText} from "/data/DiscoverSolutions/nbText.ojs"
 
-Lang = await import("./../../helpers/lang.js").then(l => l.default);
+import {lang as Lang } from "/helpers/lang.js"
 
 _lang = await Lang.lg(language.key)
 
