--- a/notebooks/deprecated/gender.qmd
+++ b/notebooks/deprecated/gender.qmd
@@ -978,7 +978,7 @@ FemaleParticipation = _lang(nbText.GenderedAfriAG.FemaleParticipationLabor.title
 ```{ojs}
 nbText = await FileAttachment("/data/genderNotebook/Gender_nbText.json").json()
 
-Lang = await import("./../../helpers/lang.js").then(l => l.default);
+import { lang as Lang } from "/helpers/lang.js"
 
 _lang = await Lang.lg(language.key)
 
